// Version
syntax = "proto3";

// Package name
option go_package = "github.com/muhammadfarhankt/NFT-Bidding-Platform";

// Structures
message IsAvailableToSellReq {
    string userId = 1;
    string nftId = 2;
}

message IsAvailableToSellRes {
    bool isAvailable = 1;
}

// Methods
service InventoryGrpcService {
    rpc IsAvailableToSell(IsAvailableToSellReq) returns (IsAvailableToSellRes) {}
}